# fund-alert-bot

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  docker.yml
deploy/: .env.example  docker-compose.prod.yml
docs/: architecture.md  deployment.md  roadmap.md
src/fund_alert_bot/: __init__.py  checks.py  commands.py  config.py  db.py  main.py  market_data.py  models.py  scheduler.py
src/fund_alert_bot/market_data/: __init__.py  akshare_provider.py  calendar.py  exceptions.py  models.py  normalize.py  provider.py
src/fund_alert_bot/notifications/: __init__.py  bark.py  base.py  dispatch.py  ntfy.py  service.py  telegram.py  webhook.py
src/fund_alert_bot/rules/: __init__.py  dca.py  drawdown.py  profit.py
tests/: test_commands.py  test_db.py  test_dca_rule.py  test_drawdown_rule.py  test_market_calendar.py  test_market_data.py  test_notifications.py  test_profit_rule.py  test_scheduler.py  test_smoke.py
